--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^1.1.2
+  file_picker: ^8.0.6
+  csv: ^6.0.0
+  fl_chart: ^0.69.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
